# omni-mind

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  build.zig  build.zig.zon  docker-compose.yml  omni.toml.example
.github/workflows/: ci.yml
scripts/: build.sh  docker-entrypoint.sh  docker-run.sh  install_and_build.sh  run-demo.sh  test_client.py  test_swarm.py  upload-to-github.sh
src/: bench.zig  core.zig  core_test.zig  ffi.zig  main.zig  prog_bench.zig  server.zig  test_marker.zig  verify.zig  zig_runtime_stubs.zig
src/core/: allocator.zig  axiom_translations.zig  consciousness.zig  conversation.zig  dialect.zig  graph.zig  lang.zig  learning.zig  mmap.zig  node.zig  seed_knowledge.zig  self.zig
src/l1/: axiom.zig  collapse.zig  procedural_weights.zig
src/l2/: reasoning.zig
src/l3/: analogy.zig
src/l4/: intent.zig
src/l5/: doubt.zig
src/l6/: synthesis.zig
src/l7/: living.zig
swarm/: Cargo.toml  build.rs
swarm/src/: crawler.rs  ffi.rs  internet.rs  lib.rs  network.rs  protocol.rs  web.rs
tests/: all_tests.zig  integration_test.py
